--- a/conf/nginx/http.conf
+++ b/conf/nginx/http.conf
@@ -6,16 +6,38 @@ events {
 }
 
 http {
+  
 
   # Configuration containing list of application servers
   upstream app_servers {
-
     server ctfd:8000;
+  }
+
+  upstream netdata {
+    server netdata:19999;
+    keepalive 64;
+  }
+  server {
+    listen 80;
+    server_name ctf.sheltoncyril.io static.sheltoncyril.io;
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
   }
 
   server {
 
-    listen 80;
+    listen 443 ssl;
+    server_name ctf.sheltoncyril.io;
+    ssl_certificate /etc/letsencrypt/live/ctf.sheltoncyril.io/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ctf.sheltoncyril.io/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    
 
     client_max_body_size 4G;
 
@@ -46,4 +68,58 @@ http {
       proxy_set_header X-Forwarded-Host $server_name;
     }
   }
+ 
+ server {
+
+    listen 443 ssl;
+    server_name static.sheltoncyril.io;
+    ssl_certificate /etc/letsencrypt/live/static.sheltoncyril.io/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/static.sheltoncyril.io/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    root /static;
+    error_page 404 =200 error.html;
+
+    location / {
+      default_type  application/octet-stream;
+      include       /etc/nginx/mime.types;
+      autoindex off;
+      try_files $uri $uri/ /error.html;
+    }
+
+    location = /netdata {
+        return 301 /netdata/;
+   }
+
+    location ~ /netdata/(?<ndpath>.*) {
+        proxy_redirect off;
+        proxy_set_header Host $host;
+
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_pass_request_headers on;
+        proxy_set_header Connection "keep-alive";
+        proxy_store off;
+        proxy_pass http://netdata/$ndpath$is_args$args;
+
+        gzip on;
+        gzip_proxied any;
+        gzip_types *;
+    }
+
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+    
+
+ }
+
 }
