--- a/conf/nginx/http.conf
+++ b/conf/nginx/http.conf
@@ -92,9 +92,10 @@ http {
    }
 
     location ~ /netdata/(?<ndpath>.*) {
+        auth_basic "Netdata Login";
+        auth_basic_user_file /etc/nginx/.passwd;
         proxy_redirect off;
         proxy_set_header Host $host;
-
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -103,7 +104,6 @@ http {
         proxy_set_header Connection "keep-alive";
         proxy_store off;
         proxy_pass http://netdata/$ndpath$is_args$args;
-
         gzip on;
         gzip_proxied any;
         gzip_types *;
