Added config for thundrcloud.net

--- a/conf/nginx/http.conf
+++ b/conf/nginx/http.conf
@@ -16,10 +16,10 @@ http {
   upstream netdata {
     server netdata:19999;
     keepalive 64;
-  }
+  } 
   server {
     listen 80;
-    server_name ctf.sheltoncyril.io static.sheltoncyril.io;
+    server_name ctf.thundrcloud.net static.thundrcloud.net;
     location / {
         return 301 https://$host$request_uri;
     }
@@ -32,9 +32,9 @@ http {
   server {
 
     listen 443 ssl;
-    server_name ctf.sheltoncyril.io;
-    ssl_certificate /etc/letsencrypt/live/ctf.sheltoncyril.io/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ctf.sheltoncyril.io/privkey.pem;
+    server_name ctf.thundrcloud.net;
+    ssl_certificate /etc/letsencrypt/live/ctf.thundrcloud.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ctf.thundrcloud.net/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
@@ -72,9 +72,9 @@ http {
  server {
 
     listen 443 ssl;
-    server_name static.sheltoncyril.io;
-    ssl_certificate /etc/letsencrypt/live/static.sheltoncyril.io/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/static.sheltoncyril.io/privkey.pem;
+    server_name static.thundrcloud.net;
+    ssl_certificate /etc/letsencrypt/live/static.thundrcloud.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/static.thundrcloud.net/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     root /static;
