--- a/conf/nginx/http.conf
+++ b/conf/nginx/http.conf
@@ -84,7 +84,7 @@ http {
       default_type  application/octet-stream;
       include       /etc/nginx/mime.types;
       autoindex off;
-      index 	index.html	index.php
+      index 	index.html	index.php;
       try_files $uri $uri/ /error.html;
     }
 
