Fixed challenges, needs testing

--- a/conf/nginx/http.conf
+++ b/conf/nginx/http.conf
@@ -78,7 +78,9 @@ http {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     root /static;
+    index index.php index.html;
     error_page 404 =200 error.html;
+    error_page 403 =200 error.html;
 
     location / {
       default_type  application/octet-stream;
